--- a/index.html
+++ b/index.html
@@ -11,31 +11,27 @@
     <main class="container">
       <div class="calc-grid">
         <div class="input">
-            <div class="upper">
-                    2222222
-            </div>
-            <div class="lower">
-                3333333
-            </div>
+          <div class="upper"></div>
+          <div class="lower"></div>
         </div>
-        <button class="span-two">AC</button>
-        <button>DEL</button>
-        <button>+</button>
-        <button>-</button>
-        <button>*</button>
-        <button>/</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>0</button>
-        <button>,</button>
-        <button class="span-two">=</button>
+        <button class="span-two operator">AC</button>
+        <button class="operator">DEL</button>
+        <button class="operator">+</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="operator">-</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="operator">*</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="operator">/</button>
+        <button class="number">0</button>
+        <button class="number">,</button>
+        <button class="span-two operator">=</button>
       </div>
     </main>
     <script src="script.js"></script>
