Add actions on add del button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           <div class="lower"></div>
         </div>
         <button class="span-two operator">AC</button>
-        <button class="operator">DEL</button>
-        <button class="operator">+</button>
+        <button class="operator delete">DEL</button>
+        <button class="operator add">+</button>
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
@@ -31,7 +31,7 @@
         <button class="operator">/</button>
         <button class="number">0</button>
         <button class="number">,</button>
-        <button class="span-two operator">=</button>
+        <button class="span-two operator result">=</button>
       </div>
     </main>
     <script src="script.js"></script>
