Add eval method to calculate, replaced coma with dot in html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button>9</button>
         <button>/</button>
         <button>0</button>
-        <button>,</button>
+        <button>.</button>
         <button class="span-two">=</button>
       </div>
     </main>
